MDEV-10692: InnoDB: Failing assertion: lock->trx->lock.wait_lock == lock

When we enter here wait_lock could be already gone i.e. NULL, that
should be allowed.